==> Muhammad-Yunus/AM335x-TI-RTOS-x-CCS-Portable-Project/Examples/TIRTOS_AM3352_I2C_SSD1306/ssd1306/ssd1306.c <==
#include <stdlib.h>
#include <math.h>
#include "ssd1306.h"
#include <ti/drv/i2c/I2C.h>

void ssd1306_I2C_WriteCommand(uint8_t command)
{
    uint8_t buf[2];
    I2C_Transaction trans;

    buf[0] = 0x00;
    buf[1] = command;

    I2C_transactionInit(&trans);
    trans.writeBuf = buf;
    trans.writeCount = 2;
    trans.slaveAddress = SSD1306_ADDRESS;
    trans.timeout = 1000;

    I2C_transfer(g_i2cHandle, &trans);
}

void ssd1306_I2C_WriteData(uint8_t *data, uint16_t size)
{
    while (size > 0)
    {
        uint8_t buf[17];
        uint16_t chunk = (size > 16) ? 16 : size;
        uint16_t i;
        I2C_Transaction trans;

        buf[0] = 0x40;
        for (i = 0; i < chunk; i++)
            buf[1 + i] = data[i];

        I2C_transactionInit(&trans);
        trans.writeBuf = buf;
        trans.writeCount = chunk + 1;
        trans.slaveAddress = SSD1306_ADDRESS;
        trans.timeout = 1000;

        I2C_transfer(g_i2cHandle, &trans);

        data += chunk;
        size -= chunk;
    }
}
